--- a/css/index.css
+++ b/css/index.css
@@ -108,19 +108,17 @@ body {
     justify-content: space-around;
 }
 
-.btn__more--info{
-    
+.btn__more--info {}
 
-    
-}
-.btn__more--info img{
+.btn__more--info img {
     padding-top: 5px;
     font-size: 6px;
     height: 50px;
 
-    
+
 }
-.btn__more--info:hover{
+
+.btn__more--info:hover {
     cursor: pointer;
 }
 
