--- a/css/editCard.css
+++ b/css/editCard.css
@@ -4,34 +4,35 @@
     background-color: #e7000a;
 }
 
-body{
+body {
     margin: 0;
     font-family: 'Sniglet', cursive;
     color: rgba(237, 103, 85, 1);
-    background-color:rgb(203, 231, 241);
+    background-color: rgb(203, 231, 241);
 }
 
 .container__logo img {
     height: 7vh;
 }
 
-.inpt__type--text, textarea{
-	width: 20vw;	
-	border: none;
-	border-radius: 20px;
-	outline: none;
-	padding: 5px;
-	font-family: 'Sniglet', cursive;
-	font-size: 1em;
-	color: #676767;
-	border: solid 3px #98d4f3;		
+.inpt__type--text,
+textarea {
+    width: 20vw;
+    border: none;
+    border-radius: 20px;
+    outline: none;
+    padding: 5px;
+    font-family: 'Sniglet', cursive;
+    font-size: 1em;
+    color: #676767;
+    border: solid 3px #98d4f3;
 }
 
-main{
+main {
     margin: 0 auto;
     width: 40%;
     display: flex;
-   
+
 }
 
 .form__container--columns {
@@ -42,7 +43,7 @@ main{
     width: 100%;
 }
 
-.container__form{
+.container__form {
     position: relative;
     background-color: #fff;
     border-radius: 1rem;
@@ -56,51 +57,52 @@ main{
     justify-content: center;
 }
 
-.form__child--column{
+.form__child--column {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.formgroup{
+.formgroup {
     display: flex;
     flex-direction: column;
 }
 
 /*  */
-#checkboxes label {
-    
-  }
-  #checkboxes ul {
-   display: flex;
+#checkboxes label {}
+
+#checkboxes ul {
+    display: flex;
     list-style: none;
     flex-direction: row;
     flex-wrap: wrap;
     float: left;
-  }
+}
 
-  #checkboxes{
+#checkboxes {
     margin: 0 auto;
     width: 70%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-  }
-  /*    */
+}
 
-  label{
-	font-size: 1.5em;
-	margin-top: 20px;
-	padding-left: 20px;
- }
+/*    */
+
+label {
+    font-size: 1.5em;
+    margin-top: 20px;
+    padding-left: 20px;
+}
 
 .select__box select {
-    font-family: 'Sniglet', cursive; ;
+    font-family: 'Sniglet', cursive;
+    ;
     cursor: pointer;
     display: block;
     border-radius: 0.8em;
-    border: solid 1px #98d4f3; 
+    border: solid 1px #98d4f3;
     margin-top: 12px;
     padding: 2px 10px;
     min-width: 14em;
@@ -113,34 +115,38 @@ main{
     background-size: .65em auto, 100%;
 }
 
-.select__box option{
-   background-color: #98d4f3;
-   color: #fff;
+.select__box option {
+    background-color: #98d4f3;
+    color: #fff;
 }
 
 
 
-@keyframes myfirst
-{
-    from{left:-1004px;}
-    to {left: 1010px;}
+@keyframes myfirst {
+    from {
+        left: -1004px;
+    }
+
+    to {
+        left: 1010px;
+    }
 }
 
-.fish{
-	width: 10px;
-	height: 110px;
-	margin-left: 535px;
-	position: absolute;	
-	animation: myfirst 24s;
-	-webkit-animation: myfirst 24s;
-	animation-iteration-count: infinite;
-	-webkit-animation-iteration-count: infinite;
-	animation-timing-function: linear;
-	-webkit-animation-timing-function: linear;
+.cloud {
+    width: 10px;
+    height: 110px;
+    margin-left: 535px;
+    position: absolute;
+    animation: myfirst 24s;
+    -webkit-animation: myfirst 24s;
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    -webkit-animation-timing-function: linear;
 }
 
-#fish{
-	top: 120px;
+#cloud {
+    top: 120px;
 }
 
 .btn__accept {
@@ -154,16 +160,16 @@ main{
     box-shadow: 0px 6px 18px -5px rgba(237, 103, 85, 1);
 }
 
-.btn__accept:hover{
+.btn__accept:hover {
     cursor: pointer;
 }
 
-.btn__add--element img {
+.btn__home img {
     height: 7vh;
     z-index: 10;
 }
 
-.btn__add--element {
+.btn__home {
     right: 0;
     bottom: 0;
     padding-bottom: 30px;
